kubernetes-nginx-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo-service
  namespace: nginx-demo
spec:
  selector:
    app: nginx-demo
  ports:
  - protocol: TCP
    port: 80
