kubernetes-nginx-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-demo-ingress
  labels:
    name: nginx-demo-ingress
spec:
  rules:
  - host: demo.ibari.ch
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-demo-service
            port: 
              number: 80
